--- a/interest-server/src/main/resources/application.yml
+++ b/interest-server/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
     context-path: /interest
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/interest?useUnicode=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
-    username:
-    password:
+    url: jdbc:mysql://127.0.0.1:3306/interest?useUnicode=true&characterEncoding=UTF-8&useSSL=false&jdbcCompliantTruncation=false&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=Asia/Shanghai
+    username: root
+    password: Xyg123!@#
     hikari:
       minimum-idle: 5
       maximum-pool-size: 15
@@ -38,7 +38,7 @@ mybatis:
 
 logging:
 # 你需要存储日志的目录
-  file: D:/interest/file/log/interest.log
+  file: ./log/interest.log
 #  level:
 #    org.springframework.web: DEBUG
 #    org.springframework.security: DEBUG
@@ -47,7 +47,7 @@ logging:
 #自定义配置
 interest:
   paths-properties:
-    image: D:/interest/file/image
+    image: ./file/image
 #    image: 你需要存储图片的目录，如上
     domain-name: http://127.0.0.1:8080
 #   domain-name: https://www.lovemtt.com
@@ -60,4 +60,4 @@ interest:
     appkey: 你在qq中注册的appkey
   other:
 #    上传文件的临时目录
-    temporary-path: D:/interest/file/tmp
+    temporary-path: ./file/tmp
